make build process "a bit" faster
[mihi]

Monotone-Parent: fec5a1ada12e4e9a6c3af585bbbb0ebd56107573
Monotone-Revision: 394e4a31d5c7314c7e808f8ea75a980bbfcd21e9

Monotone-Author: mihi
Monotone-Date: 2004-04-08T18:24:07
Monotone-Branch: i2p.i2p

--- a/apps/httptunnel/java/build.xml
+++ b/apps/httptunnel/java/build.xml
@@ -4,7 +4,7 @@
     <target name="build" depends="builddep, jar" />
     <target name="builddep">
         <ant dir="../../ministreaming/java/" target="build" />
-        <ant dir="../../../core/java/" target="build" />
+	<!-- ministreaming will build core -->
     </target>
     <target name="compile">
         <mkdir dir="./build" />
@@ -37,11 +37,11 @@
         <delete dir="./build" />
     </target>
     <target name="cleandep" depends="clean">
-        <ant dir="../../../core/java/" target="cleandep" />
+	<!-- ministreaming will clean core -->
         <ant dir="../../ministreaming/java/" target="distclean" />
     </target>
     <target name="distclean" depends="clean">
-        <ant dir="../../../core/java/" target="distclean" />
+	<!-- ministreaming will clean core -->
         <ant dir="../../ministreaming/java/" target="distclean" />
     </target>
 </project>
