added the heartbeat to the build (but not in the installer, yet)
Monotone-Parent: 0c0947b2040730bf99728388e377a1f0e8093a4c
Monotone-Revision: 941121054aee26b54336f423931bed53de4b5ff5

Monotone-Author: jrandom
Monotone-Date: 2004-04-10T05:20:12
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -18,6 +18,7 @@
         <ant dir="apps/i2ptunnel/java/" target="jar" />
         <ant dir="apps/httptunnel/java/" target="jar" />
         <ant dir="apps/phttprelay/java/" target="jar" />
+        <ant dir="apps/heartbeat/java/" target="jar" />
         <ant dir="installer/java/" target="jar" />
     </target>
     <target name="compile" />
@@ -28,6 +29,7 @@
         <copy file="apps/i2ptunnel/java/build/i2ptunnel.jar" todir="build/" />
         <copy file="apps/httptunnel/java/build/httptunnel.jar" todir="build/" />
         <copy file="apps/phttprelay/java/build/phttprelay.war" todir="build/" />
+        <copy file="apps/heartbeat/java/build/heartbeat.jar" todir="build/" />
         <copy file="installer/java/build/install.jar" todir="build/" />
         <copy file="installer/java/build/guiinstall.jar" todir="build/" />
         <copy file="installer/java/build/fetchseeds.jar" todir="build/" />
@@ -53,6 +55,7 @@
         <ant dir="apps/i2ptunnel/java/" target="distclean" />
         <ant dir="apps/httptunnel/java/" target="distclean" />
         <ant dir="apps/phttprelay/java/" target="distclean" />
+        <ant dir="apps/heartbeat/java/" target="distclean" />
         <ant dir="installer/java/" target="distclean" />
     </target>
 </project>
