--- a/apps/heartbeat/java/build.xml
+++ b/apps/heartbeat/java/build.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project basedir="." default="all" name="heartbeat">
-    <target name="all" depends="clean, build" />
+    <target name="all" depends="clean, buildGUI" />
     <target name="build" depends="builddep, jar" />
+    <target name="buildGUI" depends="build, jarGUI" />
     <target name="builddep">
         <ant dir="../../../core/java/" target="build" />
     </target>
     <target name="compile">
+        <mkdir dir="./build" />
+        <mkdir dir="./build/obj" />
+        <javac srcdir="./src" debug="true" destdir="./build/obj" excludes="src/net/i2p/heartbeat/gui/**/*.java" classpath="../../../core/java/build/i2p.jar" />
+    </target>
+    <target name="compileGUI">
         <mkdir dir="./build" />
         <mkdir dir="./build/obj" />
         <javac srcdir="./src" debug="true" destdir="./build/obj" classpath="../../../core/java/build/i2p.jar" />
@@ -15,6 +21,14 @@
             <manifest>
                 <attribute name="Main-Class" value="net.i2p.heartbeat.Heartbeat" />
                 <attribute name="Class-Path" value="i2p.jar heartbeat.jar" />
+            </manifest>
+        </jar>
+    </target>
+    <target name="jarGUI" depends="compileGUI">
+        <jar destfile="./build/heartbeatGUI.jar" basedir="./build/obj" includes="**/*.class">
+            <manifest>
+                <attribute name="Main-Class" value="net.i2p.heartbeat.gui.HeartbeatMonitor" />
+                <attribute name="Class-Path" value="i2p.jar heartbeatGUI.jar" />
             </manifest>
         </jar>
     </target>
