--- a/apps/heartbeat/java/build.xml
+++ b/apps/heartbeat/java/build.xml
@@ -1,20 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project basedir="." default="all" name="heartbeat">
     <target name="all" depends="clean, buildGUI" />
-    <target name="build" depends="builddep, jar" />
-    <target name="buildGUI" depends="build, jarGUI" />
+    <target name="build" depends="builddep, jar">
+        <echo message="heartbeat engine built, but to get the heartbeat GUI, run the buildGUI target" />
+        <echo message="However, to build the GUI, you need to fetch it the JFreeChart package by running the fetchJfreechart target" />        
+    </target>
+    <target name="fetchJfreechart">
+        <mkdir dir="./lib" />
+        <get src="http://www.jfree.org/jfreechart/jfreechart-0.9.17.zip" dest="lib/jfreechart-0.9.17.zip" />
+        <unzip src="lib/jfreechart-0.9.17.zip" dest="lib/" />
+    </target>
+    <target name="buildGUI" depends="build, jfreechart, jarGUI" />
     <target name="builddep">
         <ant dir="../../../core/java/" target="build" />
     </target>
     <target name="compile">
         <mkdir dir="./build" />
         <mkdir dir="./build/obj" />
-        <javac srcdir="./src" debug="true" destdir="./build/obj" excludes="src/net/i2p/heartbeat/gui/**/*.java" classpath="../../../core/java/build/i2p.jar" />
+        <javac srcdir="./src" debug="true" destdir="./build/obj" includes="**/*.java" excludes="net/i2p/heartbeat/gui/**" classpath="../../../core/java/build/i2p.jar" />
     </target>
     <target name="compileGUI">
         <mkdir dir="./build" />
         <mkdir dir="./build/obj" />
-        <javac srcdir="./src" debug="true" destdir="./build/obj" classpath="../../../core/java/build/i2p.jar" />
+        <javac debug="true" destdir="./build/obj">
+            <src path="src/" />
+            <classpath path="../../../core/java/build/i2p.jar" />
+            <classpath path="lib/jfreechart-0.9.17/lib/jcommon-0.9.2.jar" />
+            <classpath path="lib/jfreechart-0.9.17/lib/log4j-1.2.8.jar" />
+            <classpath path="lib/jfreechart-0.9.17/jfreechart-0.9.17.jar" />
+        </javac>
+    </target>
+    <target name="jfreechart">
+        <ant dir="./lib/jfreechart-0.9.17/" antfile="ant/build.xml" target="compile" />
     </target>
     <target name="jar" depends="compile">
         <jar destfile="./build/heartbeat.jar" basedir="./build/obj" includes="**/*.class">
@@ -25,12 +42,16 @@
         </jar>
     </target>
     <target name="jarGUI" depends="compileGUI">
-        <jar destfile="./build/heartbeatGUI.jar" basedir="./build/obj" includes="**/*.class">
+        <copy file="lib/jfreechart-0.9.17/jfreechart-0.9.17.jar" todir="build/" />
+        <copy file="lib/jfreechart-0.9.17/lib/log4j-1.2.8.jar" todir="build/" />
+        <copy file="lib/jfreechart-0.9.17/lib/jcommon-0.9.2.jar" todir="build/" />
+        <jar destfile="./build/heartbeatGUI.jar" basedir="./build/obj" includes="**">
             <manifest>
                 <attribute name="Main-Class" value="net.i2p.heartbeat.gui.HeartbeatMonitor" />
-                <attribute name="Class-Path" value="i2p.jar heartbeatGUI.jar" />
+                <attribute name="Class-Path" value="log4j-1.2.8.jar jcommon-0.9.2.jar jfreechart-0.9.17.jar heartbeatGUI.jar i2p.jar" />
             </manifest>
         </jar>
+        <echo message="You will need to copy the log4j, jcommon, and jfreechart jar files from build/ into your lib dir" />
     </target>
     <target name="javadoc">
         <mkdir dir="./build" />
@@ -47,6 +68,7 @@
         <delete dir="./build" />
     </target>
     <target name="cleandep" depends="clean">
+        <ant dir="../../../core/java/" target="cleandep" />
         <ant dir="../../../core/java/" target="cleandep" />
     </target>
     <target name="distclean" depends="clean">
