--- a/installer/java/src/install.config
+++ b/installer/java/src/install.config
@@ -88,7 +88,7 @@ qs.0045.question=<none>
 qs.0050.question=End of configuration.
 
 
-libs.count=8
+libs.count=9
 libs.0001.name=i2p.jar
     libs.0001.islib=true
 libs.0002.name=i2ptunnel.jar
@@ -105,4 +105,5 @@ libs.0007.name=hosts.txt
     libs.0007.islib=false
 libs.0008.name=mstreaming.jar
     libs.0008.islib=true
-
+libs.0009.name=sam.jar
+    libs.0009.islib=true
