Fixed build.xml to detect os, and launch 'jythonc' or 'jythonc.bat' according to whether we're running on *nix or windoze. build.xml should now work on your platform, as long as you have jython installed and jython is on your execution path.
Got SAM STREAMs working - test code added to i2psamclient.py
as function demoSTREAM()

Monotone-Parent: fd40e0d6a6c6756aa2afb68617ba42490204d676
Monotone-Revision: 5867cd2af650c3be692e6c6096dd1903dae4503f

Monotone-Author: aum
Monotone-Date: 2004-04-13T17:40:07
Monotone-Branch: i2p.i2p

--- a/apps/sam/jython/build.xml
+++ b/apps/sam/jython/build.xml
@@ -11,17 +11,25 @@
     </target>
 
     <target name="jar">
-        <mkdir dir="./build" />
-        <exec executable="jythonc">
+
+        <condition property="jythonext" value=".bat">
+            <os family="windows" />
+        </condition>
+        <condition property="jythonext" value="">
+            <not>
+                <os family="windows" />
+            </not>
+        </condition>
+
+        <exec executable="jythonc${jythonext}" dir=".">
             <env key="CLASSPATH" path="../../../core/java/build/i2p.jar:../../ministreaming/java/build/mstreaming.jar"/>
-            <arg value="--jar"/>
-            <arg value="./build/i2psam.jar"/>
-            <arg value="./src/i2psam.py"/>
+            <arg value="--jar"/><arg path="./i2psam.jar"/>
+            <arg path="./src/i2psam.py"/>
         </exec>
     </target>
 
     <target name="clean">
-        <delete dir="./build" />
+        <delete file="i2psam.jar" />
         <delete dir="./jpywork" />
     </target>
 
