--- a/build.xml
+++ b/build.xml
@@ -20,6 +20,7 @@
         <ant dir="apps/phttprelay/java/" target="jar" />
         <ant dir="apps/sam/java/" target="jar" />
         <ant dir="apps/heartbeat/java/" target="jar" />
+        <ant dir="apps/netmonitor/java/" target="jar" />
         <ant dir="installer/java/" target="jar" />
     </target>
     <target name="compile" />
@@ -32,6 +33,7 @@
         <copy file="apps/phttprelay/java/build/phttprelay.war" todir="build/" />
         <copy file="apps/sam/java/build/sam.jar" todir="build/" />
         <copy file="apps/heartbeat/java/build/heartbeat.jar" todir="build/" />
+        <copy file="apps/netmonitor/java/build/netmonitor.jar" todir="build/" />
         <copy file="installer/java/build/install.jar" todir="build/" />
         <copy file="installer/java/build/guiinstall.jar" todir="build/" />
         <copy file="installer/java/build/fetchseeds.jar" todir="build/" />
@@ -59,6 +61,11 @@
         <ant dir="apps/phttprelay/java/" target="distclean" />
         <ant dir="apps/sam/java/" target="distclean" />
         <ant dir="apps/heartbeat/java/" target="distclean" />
+        <ant dir="apps/netmonitor/java/" target="distclean" />
         <ant dir="installer/java/" target="distclean" />
+        <delete>
+            <fileset dir="." includes="**/*.class" />
+            <fileset dir="." includes="**/*.java~" />
+        </delete>
     </target>
 </project>
