added the eepProxy and harvester as part of the default clientApps run on startup (with a commented out set of lines for a heartbeat client/server) updated -cp lines accordingly use javaw for windows users (so they can close the damn dos boxes) toss the default logger logs into logs/ (say that three times fast) formatting
Monotone-Parent: da65d7e2ece76c9fcfb229a9a6a690d6f21a4748
Monotone-Revision: 2d3d7e2eeefb7c40f1176a853d913212593c4e5d

Monotone-Author: jrandom
Monotone-Date: 2004-04-20T07:32:21
Monotone-Branch: i2p.i2p

--- a/installer/java/src/logger.config.template
+++ b/installer/java/src/logger.config.template
@@ -15,7 +15,7 @@ logger.dateFormat=HH:mm:ss.SSS
 # This is the log file name before being rotated
 # '#' is replaced with the current log number for that day
 # If # is not specified, logs are not rotated
-logger.logFileName=log-#.txt
+logger.logFileName=logs/log-#.txt
 
 # Log file size:
 # Maximum size of each log file:
