--- a/installer/java/src/install.config
+++ b/installer/java/src/install.config
@@ -88,7 +88,7 @@ qs.0045.question=<none>
 qs.0050.question=End of configuration.
 
 
-libs.count=9
+libs.count=13
 libs.0001.name=i2p.jar
     libs.0001.islib=true
 libs.0002.name=i2ptunnel.jar
@@ -107,3 +107,11 @@ libs.0008.name=mstreaming.jar
     libs.0008.islib=true
 libs.0009.name=sam.jar
     libs.0009.islib=true
+libs.0010.name=heartbeat.jar
+    libs.0010.islib=true
+libs.0011.name=netmonitor.jar
+    libs.0011.islib=true
+libs.0012.name=harvester.config
+    libs.0012.islib=false
+libs.0013.name=heartbeat.config
+    libs.0013.islib=false
