--- a/installer/java/src/router.config.template
+++ b/installer/java/src/router.config.template
@@ -144,9 +144,38 @@ tunnels.tunnelDuration=600000
 # jobs configuration parameter is a throttle, saying that if there are more than
 # that many 'jobs' that want to run ASAP at any given time, additional jobs may
 # be summarily dropped.  That will reduce your load and cause others to reduce
-# their dependence on you (further reducing your load).  The default value of 20
+# their dependence on you (further reducing your load).  The default value of 40
 # should be sufficient, but may be increased if desired.  Less than 20 is not
 # recommended, as certain normal events can queue up 10 or so jobs at a time
 # (all of which only take a few milliseconds).  Leave this alone unless you know
 # what you're doing
-router.maxWaitingJobs=20
+router.maxWaitingJobs=40
+
+#
+# the remaining lines describe how you can get your router to fire up client 
+# applications it is up and running, all within the router's JVM.  Uncomment the
+# ones you want (revising the numbers and ports accordingly)
+
+# Network monitor (harvests data from the network database and stores it under 
+# monitorData/, and with the netviewer GUI you can browse through its results)
+clientApp.0.main=net.i2p.netmonitor.NetMonitor
+clientApp.0.name=NetMonitor
+clientApp.0.args=
+
+# SAM bridge (a simplified socket based protocol for using I2P - listens on port 7656.  see
+# the specs at http://www.i2p.net/node/view/144 for more info)
+clientApp.1.main=net.i2p.sam.SAMBridge
+clientApp.1.name=SAMBridge
+clientApp.1.args=0.0.0.0 7656 i2cp.tcp.host=localhost i2cp.tcp.port=##_router_i2cp_port##
+
+# EepProxy (HTTP proxy that lets you browse both eepsites and the normal web via squid.i2p)
+clientApp.2.main=net.i2p.i2ptunnel.I2PTunnel
+clientApp.2.name=EepProxy
+clientApp.2.args=-nogui -e "config localhost ##_router_i2cp_port##" -e "httpclient 4444"
+
+# Heartbeat engine (uber-simple ping/pong system, configured in heartbeat.config.  By itself
+# it just writes out stat data where its told to, but there's a seperate HeartbeatMonitor 
+# GUI to let you visualize things)
+#clientApp.3.main=net.i2p.heartbeat.Heartbeat
+#clientApp.3.name=Heartbeat
+#clientApp.3.args=heartbeat.config
