--- a/installer/java/src/startRouter.bat.template
+++ b/installer/java/src/startRouter.bat.template
@@ -5,5 +5,5 @@ cd ##_scripts_installdir##
 REM the -XX args are workarounds for bugs in java 1.4.2's garbage collector
 REM replace java with javaw if you don't want a window to pop up
 
-java -cp lib\i2p.jar;lib\router.jar -Djava.library.path=. -DloggerFilenameOverride=logs\log-router-#.txt -XX:NewSize=4M -XX:MaxNewSize=8M -XX:PermSize=8M -XX:MaxPermSize=32M net.i2p.router.Router
-pause
+javaw -cp lib\i2p.jar;lib\router.jar;lib\mstreaming.jar;lib\heartbeat.jar;lib\i2ptunnel.jar;lib\netmonitor.jar;lib\sam.jar -Djava.library.path=. -DloggerFilenameOverride=logs\log-router-#.txt -XX:NewSize=4M -XX:MaxNewSize=8M -XX:PermSize=8M -XX:MaxPermSize=32M net.i2p.router.Router
+echo Router started up, please see http://localhost:7655/
