oops, pulled the wrong entry
Monotone-Parent: 961fab2cccd39a2a486aa655ed3b28078b3b299b
Monotone-Revision: a3f1aa4617f71327b6eafbd6919e9dec1e421020

Monotone-Author: jrandom
Monotone-Date: 2004-04-20T07:55:37
Monotone-Branch: i2p.i2p

--- a/installer/java/src/harvester.config
+++ b/installer/java/src/harvester.config
@@ -128,7 +128,7 @@ statGroup.6.detail.1.name=lookups handled (5 minutes)
 statGroup.6.detail.1.option=stat_netDb.lookupsHandled.5m
 statGroup.6.detail.1.field=3
 statGroup.6.detail.2.name=lookups matched (5 minutes)
-statGroup.6.detail.2.option=stat_netDb.lookupsReceived.5m
+statGroup.6.detail.2.option=stat_netDb.lookupsMatched.5m
 statGroup.6.detail.2.field=3
 statGroup.6.detail.3.name=lookups received (hour)
 statGroup.6.detail.3.option=stat_netDb.lookupsReceived.60m
@@ -137,7 +137,7 @@ statGroup.6.detail.4.name=lookups handled (hour)
 statGroup.6.detail.4.option=stat_netDb.lookupsHandled.60m
 statGroup.6.detail.4.field=3
 statGroup.6.detail.5.name=lookups matched (hour)
-statGroup.6.detail.5.option=stat_netDb.lookupsReceived.60m
+statGroup.6.detail.5.option=stat_netDb.lookupsMatched.60m
 statGroup.6.detail.5.field=3
 # 
 statGroup.7.name=networkDbActivity
