--- a/build.xml
+++ b/build.xml
@@ -7,6 +7,8 @@
         <echo message="  clean:     clean up the ./build/ dir" />
         <echo message="  distclean: clean up all derived files" />
         <echo message="  dist:      distclean, then build and javadoc" />
+        <echo message="  prepGUI:   pull the LGPL and APL code for JFreeChart that we use in the GUIs" />
+        <echo message="  buildGUI:  build the heartbeat and netmonitor GUIs (must have run prepGUI already)" />
     </target>
     <target name="dist" depends="distclean, build, javadoc" />
     <target name="build" depends="builddep, jar" />
@@ -67,5 +69,39 @@
             <fileset dir="." includes="**/*.class" />
             <fileset dir="." includes="**/*.java~" />
         </delete>
+    </target>
+    <target name="distGUI" depends="clean, buildGUI">
+        <mkdir dir="build/lib" />
+        <copy file="apps/jfreechart/jfreechart-0.9.17/jfreechart-0.9.17.jar" todir="build/lib" />
+        <copy file="apps/jfreechart/jfreechart-0.9.17/lib/log4j-1.2.8.jar" todir="build/lib" />
+        <copy file="apps/jfreechart/jfreechart-0.9.17/lib/jcommon-0.9.2.jar" todir="build/lib" />
+        <copy file="apps/jfreechart/GUI-licenses.txt" todir="build/" />
+        <copy file="apps/netmonitor/java/build/netviewer.jar" todir="build/lib" />
+        <copy file="apps/heartbeat/java/build/heartbeatGUI.jar" todir="build/lib" />
+        <zip destfile="build/gui.zip" basedir="build/" includes="GUI-licenses.txt lib/*.jar" />
+    </target>
+    <target name="prepGUI">
+        <echo message="The code being fetched comes from http://www.jfree.org/jfreechart/" />
+        <echo message="It includes code licensed under the LGPL and the APL - please see" />
+        <echo message="the JFreeChart site (or the info downloaded) for source and details" />
+        <ant dir="apps/jfreechart/" target="fetchJfreechart" />
+        <ant dir="apps/jfreechart/" target="build" />
+    </target>
+    <target name="buildGUI">
+        <echo message="Building the GUIs for the heartbeat and netmonitor apps, which depend upon" />
+        <echo message="the JFreeChart and related packages.  The following will fail if you haven't" />
+        <echo message="already run 'ant prepGUI' to fetch the LGPL/APL'ed code" />
+        <ant dir="apps/heartbeat/java" target="buildGUI" />
+        <ant dir="apps/netmonitor/java" target="buildGUI" />
+        <copy file="apps/jfreechart/jfreechart-0.9.17/jfreechart-0.9.17.jar" todir="build/" />
+        <copy file="apps/jfreechart/jfreechart-0.9.17/lib/log4j-1.2.8.jar" todir="build/" />
+        <copy file="apps/jfreechart/jfreechart-0.9.17/lib/jcommon-0.9.2.jar" todir="build/" />
+        <copy file="apps/jfreechart/GUI-licenses.txt" todir="build/" />
+        <copy file="apps/netmonitor/java/build/netviewer.jar" todir="build/" />
+        <copy file="apps/heartbeat/java/build/heartbeatGUI.jar" todir="build/" />
+        <echo message="GUIs created.  You will need the following files to run them: " />
+        <echo message="jfreechart-0.9.17.jar log4j-1.2.8.jar jcommon-0.9.2.jar" />
+        <echo message="To run the netmonitor GUI: java -cp jfreechart-0.9.17.jar:log4j-1.2.8.jar:jcommon-0.9.2.jar -jar netviewer.jar" />
+        <echo message="To run the heartbeat GUI: java -cp jfreechart-0.9.17.jar:log4j-1.2.8.jar:jcommon-0.9.2.jar -jar heartbeatGUI.jar" />
     </target>
 </project>
