so this is why we're not harvesting the dropped jobs/messages (d'oh) if you update your harvester.config and rerun the router, it'll start paying attention to it (no, unfortunately the NetMonitor doesn't periodically read this file)
Monotone-Parent: 5d2b32a6ed48eb36a90c4e1051d7ef11f92302be
Monotone-Revision: b44e449c19fef02c053844f3d0bdb851029e086d

Monotone-Author: jrandom
Monotone-Date: 2004-04-22T03:17:41
Monotone-Branch: i2p.i2p

--- a/installer/java/src/harvester.config
+++ b/installer/java/src/harvester.config
@@ -5,16 +5,16 @@
 # 
 statGroup.0.name=dropped
 statGroup.0.detail.0.name=num dropped jobs (minute)
-statGroup.0.detail.0.option=stat_jobQueue.droppedJobs.60m
+statGroup.0.detail.0.option=stat_jobQueue.droppedJobs.60s
 statGroup.0.detail.0.field=3
 statGroup.0.detail.1.name=num dropped jobs (hour)
-statGroup.0.detail.1.option=stat_jobQueue.droppedJobs.60h
+statGroup.0.detail.1.option=stat_jobQueue.droppedJobs.60m
 statGroup.0.detail.1.field=3
 statGroup.0.detail.2.name=num dropped messages (minute)
-statGroup.0.detail.2.option=stat_inNetPool.dropped.60m
+statGroup.0.detail.2.option=stat_inNetPool.dropped.60s
 statGroup.0.detail.2.field=3
 statGroup.0.detail.3.name=num dropped messages (hour)
-statGroup.0.detail.3.option=stat_inNetPool.dropped.60h
+statGroup.0.detail.3.option=stat_inNetPool.dropped.60m
 statGroup.0.detail.3.field=3
 # 
 statGroup.1.name=encryptTime
