don't harvest so much data
Monotone-Parent: 8d5ff6f0833b273dc69d14fcdb995f8570218ac1
Monotone-Revision: 2e8c6c6c2459d3a7c170c9595ee207616f6aff70

Monotone-Author: jrandom
Monotone-Date: 2004-04-30T07:15:29
Monotone-Branch: i2p.i2p

--- a/installer/java/src/harvester.config
+++ b/installer/java/src/harvester.config
@@ -3,18 +3,20 @@
 #
 # You probably don't want to edit this.
 # 
+harvestDelaySeconds=600
+#
 statGroup.0.name=dropped
-statGroup.0.detail.0.name=num dropped jobs (minute)
-statGroup.0.detail.0.option=stat_jobQueue.droppedJobs.60s
+statGroup.0.detail.0.name=num dropped jobs (hour)
+statGroup.0.detail.0.option=stat_jobQueue.droppedJobs.60m
 statGroup.0.detail.0.field=3
-statGroup.0.detail.1.name=num dropped jobs (hour)
-statGroup.0.detail.1.option=stat_jobQueue.droppedJobs.60m
+statGroup.0.detail.1.name=num dropped jobs (day)
+statGroup.0.detail.1.option=stat_jobQueue.droppedJobs.24h
 statGroup.0.detail.1.field=3
-statGroup.0.detail.2.name=num dropped messages (minute)
-statGroup.0.detail.2.option=stat_inNetPool.dropped.60s
+statGroup.0.detail.2.name=num dropped messages (hour)
+statGroup.0.detail.2.option=stat_inNetPool.dropped.60m
 statGroup.0.detail.2.field=3
-statGroup.0.detail.3.name=num dropped messages (hour)
-statGroup.0.detail.3.option=stat_inNetPool.dropped.60m
+statGroup.0.detail.3.name=num dropped messages (day)
+statGroup.0.detail.3.option=stat_inNetPool.dropped.24h
 statGroup.0.detail.3.field=3
 # 
 statGroup.1.name=encryptTime
@@ -25,10 +27,10 @@ statGroup.1.detail.1.name=num encryptions (minute)
 statGroup.1.detail.1.option=stat_crypto.elGamal.encrypt.60s
 statGroup.1.detail.1.field=7
 statGroup.1.detail.2.name=encryption time avg ms (hour)
-statGroup.1.detail.2.option=stat_crypto.elGamal.encrypt.60s
+statGroup.1.detail.2.option=stat_crypto.elGamal.encrypt.60m
 statGroup.1.detail.2.field=0
 statGroup.1.detail.3.name=num encryptions (hour)
-statGroup.1.detail.3.option=stat_crypto.elGamal.encrypt.60s
+statGroup.1.detail.3.option=stat_crypto.elGamal.encrypt.60m
 statGroup.1.detail.3.field=7
 statGroup.1.detail.4.name=garlic fail (hour)
 statGroup.1.detail.4.option=stat_crypto.garlic.decryptFail.60m
