include the timestamper (and fire the client on startup, using a pair of arbitrary NTP hosts - to be configured later)
Monotone-Parent: 38e6c6cda73693746365dd8a2e180e8a0b086cde
Monotone-Revision: 601ff5b1dfb664612a2cb292bd32b9c5d181a3ea

Monotone-Author: jrandom
Monotone-Date: 2004-05-02T05:11:06
Monotone-Branch: i2p.i2p

--- a/installer/java/src/install.config
+++ b/installer/java/src/install.config
@@ -88,7 +88,7 @@ qs.0045.question=<none>
 qs.0050.question=End of configuration.
 
 
-libs.count=13
+libs.count=14
 libs.0001.name=i2p.jar
     libs.0001.islib=true
 libs.0002.name=i2ptunnel.jar
@@ -115,3 +115,5 @@ libs.0012.name=harvester.config
     libs.0012.islib=false
 libs.0013.name=heartbeat.config
     libs.0013.islib=false
+libs.0014.name=timestamper.jar
+    libs.0014.islib=true
