--- a/installer/java/src/router.config.template
+++ b/installer/java/src/router.config.template
@@ -156,26 +156,31 @@ router.maxWaitingJobs=40
 # applications it is up and running, all within the router's JVM.  Uncomment the
 # ones you want (revising the numbers and ports accordingly)
 
+clientApp=0.main=net.i2p.time.Timestamper
+clientApp.0.name=Timestamper
+clientApp.0.onBoot=true
+clientApp.0.args=http://localhost:7655/setTime?k=v ntp1.sth.netnod.se ntp2.sth.netnod.se
+
 # Network monitor (harvests data from the network database and stores it under 
 # monitorData/, and with the netviewer GUI you can browse through its results)
-clientApp.0.main=net.i2p.netmonitor.NetMonitor
-clientApp.0.name=NetMonitor
-clientApp.0.args=
+clientApp.1.main=net.i2p.netmonitor.NetMonitor
+clientApp.1.name=NetMonitor
+clientApp.1.args=
 
 # SAM bridge (a simplified socket based protocol for using I2P - listens on port 7656.  see
 # the specs at http://www.i2p.net/node/view/144 for more info)
-clientApp.1.main=net.i2p.sam.SAMBridge
-clientApp.1.name=SAMBridge
-clientApp.1.args=0.0.0.0 7656 i2cp.tcp.host=localhost i2cp.tcp.port=##_router_i2cp_port##
+clientApp.2.main=net.i2p.sam.SAMBridge
+clientApp.2.name=SAMBridge
+clientApp.2.args=0.0.0.0 7656 i2cp.tcp.host=localhost i2cp.tcp.port=##_router_i2cp_port##
 
 # EepProxy (HTTP proxy that lets you browse both eepsites and the normal web via squid.i2p)
-clientApp.2.main=net.i2p.i2ptunnel.I2PTunnel
-clientApp.2.name=EepProxy
-clientApp.2.args=-nogui -e "config localhost ##_router_i2cp_port##" -e "httpclient 4444"
+clientApp.3.main=net.i2p.i2ptunnel.I2PTunnel
+clientApp.3.name=EepProxy
+clientApp.3.args=-nogui -e "config localhost ##_router_i2cp_port##" -e "httpclient 4444"
 
 # Heartbeat engine (uber-simple ping/pong system, configured in heartbeat.config.  By itself
 # it just writes out stat data where its told to, but there's a seperate HeartbeatMonitor 
 # GUI to let you visualize things)
-#clientApp.3.main=net.i2p.heartbeat.Heartbeat
-#clientApp.3.name=Heartbeat
-#clientApp.3.args=heartbeat.config
+#clientApp.4.main=net.i2p.heartbeat.Heartbeat
+#clientApp.4.name=Heartbeat
+#clientApp.4.args=heartbeat.config
