added some harvest options dont use javaw, since its a bitch to kill multiple jvms (yeah, this leaves a dos box.  we'll deal until we've got the shutdown admin control)
Monotone-Parent: 3301f39470574882ce2e85fd7b85c27d69043c99
Monotone-Revision: 551b5b937480265afb12f7e8badd0c781e626d23

Monotone-Author: jrandom
Monotone-Date: 2004-05-13T23:32:57
Monotone-Branch: i2p.i2p

--- a/installer/java/src/harvester.config
+++ b/installer/java/src/harvester.config
@@ -95,6 +95,12 @@ statGroup.4.detail.6.field=3
 statGroup.4.detail.7.name=unknown tunnel time remaining (day)
 statGroup.4.detail.7.option=stat_tunnel.unknownTunnelTimeLeft.24h
 statGroup.4.detail.7.field=0
+statGroup.4.detail.8.name=tunnel test time (hour)
+statGroup.4.detail.8.option=stat_tunnel.testSuccessTime.60m
+statGroup.4.detail.8.field=0
+statGroup.4.detail.9.name=tunnel test time (day)
+statGroup.4.detail.9.option=stat_tunnel.testSuccessTime.24h
+statGroup.4.detail.9.field=0
 # 
 statGroup.5.name=transfer
 statGroup.5.detail.0.name=messages sent (5 minutes)
@@ -154,4 +160,7 @@ statGroup.7.detail.2.option=stat_netDb.storeSent.5m
 statGroup.7.detail.2.field=3
 statGroup.7.detail.3.name=db store sent (hour)
 statGroup.7.detail.3.option=stat_netDb.storeSent.60m
+statGroup.7.detail.3.field=3
+statGroup.7.detail.4.name=failed db lookups (hour)
+statGroup.7.detail.3.option=stat_netDb.failedPeers.60m
 statGroup.7.detail.3.field=3
