add (commented out) router.shutdownPassword
Monotone-Parent: 3b370cd4199367eaefff91cbbd1b6700f7ed91c5
Monotone-Revision: f855b3fdea3dbe9b699ef940bead909d123cb713

Monotone-Author: jrandom
Monotone-Date: 2004-05-20T11:27:49
Monotone-Branch: i2p.i2p

--- a/installer/java/src/router.config.template
+++ b/installer/java/src/router.config.template
@@ -138,6 +138,13 @@ tunnels.tunnelDuration=600000
 # what you're doing
 router.maxWaitingJobs=40
 
+# shutdown password
+# uncomment the following (after changing the value) to allow shutting down the 
+# router through the web interface (using the form provided, or directly via
+# http://localhost:7655/shutdown?password=thisIsASecret)
+#router.shutdownPassword=thisIsASecret
+
+
 #
 # the remaining lines describe how you can get your router to fire up client 
 # applications it is up and running, all within the router's JVM.  Uncomment the
