update the bandwidth limiter config properties
Monotone-Parent: 06dbb261a4d286f620c401525a21e52989aeaa78
Monotone-Revision: edae3b0fbfc3efa4addb55b0c94ebc35b85aa636

Monotone-Author: jrandom
Monotone-Date: 2004-06-13T19:59:44
Monotone-Branch: i2p.i2p

--- a/installer/java/src/router.config.template
+++ b/installer/java/src/router.config.template
@@ -16,12 +16,15 @@ i2cp.port=##_router_i2cp_port##
 
 # I2P router administrative web port (currently only responds to /routerConsole.html)
 router.adminPort=7655
+
 # Bandwidth limits
-# These limits are for all i2np connections - tcp or whatever
-# They are hard enforced with no smoothing.
-# XXX Until the 0.3.2 release, these should NOT BE USED.  Their values will be ignored!!!
-i2np.bandwidth.inboundBytesPerMinute=##_router_inbps##
-i2np.bandwidth.outboundBytesPerMinute=##_router_outbps##
+# These limits are for all i2np connections - tcp or whatever to all peers.
+# They are hard enforced with no smoothing.  If they are <= 0, no limits are enforced.
+i2np.bandwidth.inboundKBytesPerSecond=-1
+i2np.bandwidth.outboundKBytesPerSecond=-1
+# How many bytes will we let accumulate due to inactivity (allowing bursts)?
+i2np.bandwidth.inboundBurstKBytes=-1
+i2np.bandwidth.outboundBurstKBytes=-1
 
 # Publish peer rankings
 # If true, include the current liveliness and reliability rankings in one's published RouterInfo data
