--- a/installer/java/src/harvester.config
+++ b/installer/java/src/harvester.config
@@ -101,6 +101,24 @@ statGroup.4.detail.8.field=0
 statGroup.4.detail.9.name=tunnel test time (day)
 statGroup.4.detail.9.option=stat_tunnel.testSuccessTime.24h
 statGroup.4.detail.9.field=0
+statGroup.4.detail.10.name=avg messages per inbound tunnel (10 minutes)
+statGroup.4.detail.10.option=stat_tunnel.inboundMessagesProcessed.10m
+statGroup.4.detail.10.field=0
+statGroup.4.detail.11.name=avg messages per inbound tunnel (60 minutes)
+statGroup.4.detail.11.option=stat_tunnel.inboundMessagesProcessed.60m
+statGroup.4.detail.11.field=0
+statGroup.4.detail.12.name=avg messages per outbound tunnel (10 minutes)
+statGroup.4.detail.12.option=stat_tunnel.outboundMessagesProcessed.10m
+statGroup.4.detail.12.field=0
+statGroup.4.detail.13.name=avg messages per outbound tunnel (60 minutes)
+statGroup.4.detail.13.option=stat_tunnel.outboundMessagesProcessed.60m
+statGroup.4.detail.13.field=0
+statGroup.4.detail.14.name=avg messages per participating tunnel (10 minutes)
+statGroup.4.detail.14.option=stat_tunnel.participatingMessagesProcessed.10m
+statGroup.4.detail.14.field=0
+statGroup.4.detail.15.name=avg messages per participating tunnel (60 minutes)
+statGroup.4.detail.15.option=stat_tunnel.participatingMessagesProcessed.60m
+statGroup.4.detail.15.field=0
 # 
 statGroup.5.name=transfer
 statGroup.5.detail.0.name=messages sent (5 minutes)
@@ -128,39 +146,109 @@ statGroup.5.detail.7.name=receive message size avg (hour)
 statGroup.5.detail.7.option=stat_transport.receiveMessageSize.60m
 statGroup.5.detail.7.field=0
 # 
-statGroup.6.name=networkDbHandling
-statGroup.6.detail.0.name=lookups received (5 minutes)
-statGroup.6.detail.0.option=stat_netDb.lookupsReceived.5m
-statGroup.6.detail.0.field=3
-statGroup.6.detail.1.name=lookups handled (5 minutes)
-statGroup.6.detail.1.option=stat_netDb.lookupsHandled.5m
-statGroup.6.detail.1.field=3
-statGroup.6.detail.2.name=lookups matched (5 minutes)
-statGroup.6.detail.2.option=stat_netDb.lookupsMatched.5m
-statGroup.6.detail.2.field=3
-statGroup.6.detail.3.name=lookups received (hour)
-statGroup.6.detail.3.option=stat_netDb.lookupsReceived.60m
-statGroup.6.detail.3.field=3
-statGroup.6.detail.4.name=lookups handled (hour)
-statGroup.6.detail.4.option=stat_netDb.lookupsHandled.60m
-statGroup.6.detail.4.field=3
-statGroup.6.detail.5.name=lookups matched (hour)
-statGroup.6.detail.5.option=stat_netDb.lookupsMatched.60m
-statGroup.6.detail.5.field=3
+statGroup.6.name=transferSmall
+statGroup.6.detail.0.name=small messages sent (5 minutes)
+statGroup.6.detail.0.option=stat_transport.sendMessageSmall.5m
+statGroup.6.detail.0.field=7
+statGroup.6.detail.1.name=small messages sent (hour)
+statGroup.6.detail.1.option=stat_transport.sendMessageSmall.60m
+statGroup.6.detail.1.field=7
+statGroup.6.detail.2.name=small messages received (5 minutes)
+statGroup.6.detail.2.option=stat_transport.receiveMessageSmall.5m
+statGroup.6.detail.2.field=7
+statGroup.6.detail.3.name=small messages received (hour)
+statGroup.6.detail.3.option=stat_transport.receiveMessageSmall.60m
+statGroup.6.detail.3.field=7
 # 
-statGroup.7.name=networkDbActivity
-statGroup.7.detail.0.name=lookups sent (hour)
-statGroup.7.detail.0.option=stat_netDb.successPeers.60m
+statGroup.7.name=transferMedium
+statGroup.7.detail.0.name=medium messages sent (5 minutes)
+statGroup.7.detail.0.option=stat_transport.sendMessageMedium.5m
 statGroup.7.detail.0.field=7
-statGroup.7.detail.1.name=lookup peers (hour)
-statGroup.7.detail.1.option=stat_netDb.successPeers.60m
-statGroup.7.detail.1.field=0
-statGroup.7.detail.2.name=db store sent (5 minutes)
-statGroup.7.detail.2.option=stat_netDb.storeSent.5m
-statGroup.7.detail.2.field=3
-statGroup.7.detail.3.name=db store sent (hour)
-statGroup.7.detail.3.option=stat_netDb.storeSent.60m
-statGroup.7.detail.3.field=3
-statGroup.7.detail.4.name=failed db lookups (hour)
-statGroup.7.detail.3.option=stat_netDb.failedPeers.60m
-statGroup.7.detail.3.field=3
+statGroup.7.detail.1.name=medium messages sent (hour)
+statGroup.7.detail.1.option=stat_transport.sendMessageMedium.60m
+statGroup.7.detail.1.field=7
+statGroup.7.detail.2.name=medium messages received (5 minutes)
+statGroup.7.detail.2.option=stat_transport.receiveMessageMedium.5m
+statGroup.7.detail.2.field=7
+statGroup.7.detail.3.name=medium messages received (hour)
+statGroup.7.detail.3.option=stat_transport.receiveMessageMedium.60m
+statGroup.7.detail.3.field=7
+# 
+statGroup.8.name=transferLarge
+statGroup.8.detail.0.name=large messages sent (5 minutes)
+statGroup.8.detail.0.option=stat_transport.sendMessageLarge.5m
+statGroup.8.detail.0.field=7
+statGroup.8.detail.1.name=large messages sent (hour)
+statGroup.8.detail.1.option=stat_transport.sendMessageLarge.60m
+statGroup.8.detail.1.field=7
+statGroup.8.detail.2.name=large messages received (5 minutes)
+statGroup.8.detail.2.option=stat_transport.receiveMessageLarge.5m
+statGroup.8.detail.2.field=7
+statGroup.8.detail.3.name=large messages received (hour)
+statGroup.8.detail.3.option=stat_transport.receiveMessageLarge.60m
+statGroup.8.detail.3.field=7
+# 
+statGroup.9.name=networkDbHandling
+statGroup.9.detail.0.name=lookups received (5 minutes)
+statGroup.9.detail.0.option=stat_netDb.lookupsReceived.5m
+statGroup.9.detail.0.field=3
+statGroup.9.detail.1.name=lookups handled (5 minutes)
+statGroup.9.detail.1.option=stat_netDb.lookupsHandled.5m
+statGroup.9.detail.1.field=3
+statGroup.9.detail.2.name=lookups matched (5 minutes)
+statGroup.9.detail.2.option=stat_netDb.lookupsMatched.5m
+statGroup.9.detail.2.field=3
+statGroup.9.detail.3.name=lookups received (hour)
+statGroup.9.detail.3.option=stat_netDb.lookupsReceived.60m
+statGroup.9.detail.3.field=3
+statGroup.9.detail.4.name=lookups handled (hour)
+statGroup.9.detail.4.option=stat_netDb.lookupsHandled.60m
+statGroup.9.detail.4.field=3
+statGroup.9.detail.5.name=lookups matched (hour)
+statGroup.9.detail.5.option=stat_netDb.lookupsMatched.60m
+statGroup.9.detail.5.field=3
+# 
+statGroup.10.name=networkDbActivity
+statGroup.10.detail.0.name=lookups sent (hour)
+statGroup.10.detail.0.option=stat_netDb.successPeers.60m
+statGroup.10.detail.0.field=7
+statGroup.10.detail.1.name=lookup peers (hour)
+statGroup.10.detail.1.option=stat_netDb.successPeers.60m
+statGroup.10.detail.1.field=0
+statGroup.10.detail.2.name=db store sent (5 minutes)
+statGroup.10.detail.2.option=stat_netDb.storeSent.5m
+statGroup.10.detail.2.field=3
+statGroup.10.detail.3.name=db store sent (hour)
+statGroup.10.detail.3.option=stat_netDb.storeSent.60m
+statGroup.10.detail.3.field=3
+statGroup.10.detail.4.name=failed db lookups (hour)
+statGroup.10.detail.3.option=stat_netDb.failedPeers.60m
+statGroup.10.detail.3.field=3
+# 
+statGroup.11.name=bandwidth
+statGroup.11.detail.0.name=send rate (5 minutes)
+statGroup.11.detail.0.option=stat_bandwidthSendBps.5m
+statGroup.11.detail.0.field=0
+statGroup.11.detail.1.name=send rate (60 minutes)
+statGroup.11.detail.1.option=stat_bandwidthSendBps.60m
+statGroup.11.detail.1.field=0
+statGroup.11.detail.2.name=receive rate (5 minutes)
+statGroup.11.detail.2.option=stat_bandwidthReceiveBps.5m
+statGroup.11.detail.2.field=0
+statGroup.11.detail.3.name=receive rate (60 minutes)
+statGroup.11.detail.3.option=stat_bandwidthReceiveBps.60m
+statGroup.11.detail.3.field=0
+# 
+statGroup.12.name=queueing
+statGroup.11.detail.0.name=time to process inbound (5 minutes)
+statGroup.11.detail.0.option=stat_inNetMessage.timeToDiscard.5m
+statGroup.11.detail.0.field=0
+statGroup.11.detail.1.name=time to process inbound (60 minutes)
+statGroup.11.detail.1.option=stat_inNetMessage.timeToDiscard.60m
+statGroup.11.detail.1.field=0
+statGroup.11.detail.2.name=time to process outbound (5 minutes)
+statGroup.11.detail.2.option=stat_outNetMessage.timeToDiscard.5m
+statGroup.11.detail.2.field=0
+statGroup.11.detail.3.name=time to process outbound (60 minutes)
+statGroup.11.detail.3.option=stat_outNetMessage.timeToDiscard.60m
+statGroup.11.detail.3.field=0
