Make this compile straight out of CVS (you have to have libtomcrypt compiled in a libtomcrypt-0.96 directory in your home directory)
Monotone-Parent: 436e2a100bb4524b2bd81e59636bb0b0495dc68b
Monotone-Revision: 52cd99eab22748717c77d73b4eca8e40080ee84a

Monotone-Author: mpc
Monotone-Date: 2004-06-21T08:21:17
Monotone-Branch: i2p.i2p

--- a/apps/enclave/Makefile
+++ b/apps/enclave/Makefile
@@ -12,9 +12,9 @@ LOGDIR = log
 OBJDIR = obj
 SRCDIR = src
 
-SAMINCDIR = ../libsam/inc
-SAMLIBDIR = ../libsam/lib
-TOMCRYPTDIR = ../libtomcrypt-0.96
+SAMINCDIR = ../sam/c/inc
+SAMLIBDIR = ../sam/c/lib
+TOMCRYPTDIR = $(HOME)/libtomcrypt-0.96
 
 #
 # Programs
