new target - buildclean (== distclean build) useful for my ide so i dont have to run two targets sequentially (and 'dist' goes one step further to include javadoc, which i dont need)
Monotone-Parent: 05ab85d0252ce5fcbbb8b46ded226c0496066b93
Monotone-Revision: 0bcdb70b43d8583d92e2b7d45c25ff00fc099a45

Monotone-Author: jrandom
Monotone-Date: 2004-06-22T04:56:44
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -12,6 +12,7 @@
     </target>
     <target name="dist" depends="distclean, build, javadoc" />
     <target name="build" depends="builddep, jar" />
+    <target name="buildclean" depends="distclean, builddep, jar" />
     <target name="builddep">
 	<!-- build *everything* here, but only once -->
         <ant dir="core/java/" target="jar" />
