Get rid of Debian-specific Makefile -- gcc < 3.0 is obsolete
Monotone-Parent: ca8d5b4a0ef0a7ba2736dc98a933fb3e244a7046
Monotone-Revision: 7a9866c01a2eb386e345aba33a9c3ab7a591cea3

Monotone-Author: mpc
Monotone-Date: 2004-06-22T22:49:59
Monotone-Branch: i2p.i2p

--- a/apps/sam/c/Makefile.linux
+++ b/apps/sam/c/Makefile.linux
@@ -28,7 +28,7 @@ CC = gcc
 # Flags
 #
 
-CFLAGS = -g -march=i486 -O2 -pipe -std=c99 -Wall
+CFLAGS = -g -O2 -pipe -std=c99 -Wall
 CFLAGS += -DOS=$(OS)
 CFLAGS += -I$(INCDIR)
 
