Added PRNG code
Monotone-Parent: 7a9866c01a2eb386e345aba33a9c3ab7a591cea3
Monotone-Revision: 2c7e13f0faabac1c256b7215758a8343ddc02fe2

Monotone-Author: mpc
Monotone-Date: 2004-06-23T11:56:53
Monotone-Branch: i2p.i2p

--- a/apps/enclave/Makefile
+++ b/apps/enclave/Makefile
@@ -44,6 +44,7 @@ OBJS =	$(OBJDIR)/bigint.o \
 		$(OBJDIR)/logger.o \
 		$(OBJDIR)/main.o \
 		$(OBJDIR)/peers.o \
+		$(OBJDIR)/random.o \
 		$(OBJDIR)/rpc.o \
 		$(OBJDIR)/sam.o \
 		$(OBJDIR)/sha1.o
