just starting this (backup)
Monotone-Parent: 2c7e13f0faabac1c256b7215758a8343ddc02fe2
Monotone-Revision: 53c852f54652845a0c8e778f9ccdad3ab6981efc

Monotone-Author: mpc
Monotone-Date: 2004-06-23T12:34:50
Monotone-Branch: i2p.i2p

--- a/apps/enclave/Makefile
+++ b/apps/enclave/Makefile
@@ -41,6 +41,7 @@ LIBS = -lsam -ltomcrypt
 #
 
 OBJS =	$(OBJDIR)/bigint.o \
+		$(OBJDIR)/chk.o \
 		$(OBJDIR)/logger.o \
 		$(OBJDIR)/main.o \
 		$(OBJDIR)/peers.o \
