Started work on a configuration options object
Monotone-Parent: 0fa63fb0c4ba5c35d2086bd4af1836b6c7258683
Monotone-Revision: 0662505668a5a9180981bfbc1cf8ecab5a5af8ff

Monotone-Author: mpc
Monotone-Date: 2004-06-24T11:47:01
Monotone-Branch: i2p.i2p

--- a/apps/enclave/Makefile
+++ b/apps/enclave/Makefile
@@ -42,6 +42,7 @@ LIBS = -lsam -ltomcrypt
 
 OBJS =	$(OBJDIR)/bigint.o \
 		$(OBJDIR)/chk.o \
+		$(OBJDIR)/config.o \
 		$(OBJDIR)/logger.o \
 		$(OBJDIR)/main.o \
 		$(OBJDIR)/peers.o \
